--- a/index.css
+++ b/index.css
@@ -46,6 +46,9 @@ nav a:hover {
   background-color: #1a1a1a;
   border: 1px solid #777;
 }
+#dynamic-greeting {
+  font-size: 1.5rem;
+}
 .cta-button {
   background-color: transparent;
   color: #f5f5f5;
