--- a/index.css
+++ b/index.css
@@ -145,7 +145,7 @@ nav a:hover {
   border: 1px solid #777;
 }
 .skill-item a {
-  text-decoration: underline;
+  text-decoration: none;
   color: #f5f5f5;
 }
 .skill-item strong {
@@ -154,9 +154,12 @@ nav a:hover {
   color: #f5f5f5;
   margin-bottom: 5px;
 }
-.skill-item span {
-  color: #bbb;
-  font-weight: 500;
+.skill-item-header {
+  color: #f5f5f5;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
 }
 .dotted-bg {
   background: radial-gradient(#2a2a2a, transparent 8%);
