--- a/index.css
+++ b/index.css
@@ -127,12 +127,12 @@ nav a:hover {
   text-decoration: underline;
   color: #f5f5f5;
 }
-.skills-grid {
+.cards-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
 }
-.skill-item {
+.card {
   padding: 15px;
   border-radius: 8px;
   display: flex;
@@ -142,23 +142,23 @@ nav a:hover {
   border: 1px solid transparent;
   transition: all 0.3s ease-in;
 }
-.skill-item:hover {
+.card:hover {
   background-color: #1a1a1a;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   border: 1px solid #777;
 }
-.skill-item a {
+.card a {
   text-decoration: none;
   color: #f5f5f5;
 }
-.skill-item strong {
+.card strong {
   display: block;
   font-weight: 700;
   color: #f5f5f5;
   margin-bottom: 5px;
 }
-.skill-item-header {
+.card-header {
   color: #f5f5f5;
   display: flex;
   flex-direction: row;
@@ -201,7 +201,7 @@ footer a:hover {
   .container {
     max-width: 90vw;
   }
-  .skills-grid {
+  .cards-grid {
     grid-template-columns: 1fr;
   }
 }
